# VNet

./: CMakeLists.txt  README.md  main.cpp
Controller/: PacketController.cpp  PacketController.h  UDPController.cpp  UDPController.h
Controller/Handlers/: CommandHandler.cpp  CommandHandler.h  IPSyncHandler.cpp  IPSyncHandler.h  TextMessageHandler.cpp  TextMessageHandler.h
Packet/: IPSyncPacket.cpp  IPSyncPacket.h  Packet.h  PacketBuilder.cpp  PacketBuilder.h  TestPayloadPacket.cpp  TestPayloadPacket.h  TextMessagePacket.cpp  TextMessagePacket.h
Test/: test.cpp
Utils/: DataBuffer.cpp  DataBuffer.h  NetworkUtils.cpp  NetworkUtils.h
